# AIS4900_master

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DETAILES.md  EXPERIMENT_SUMMARIES.md  FUTURE_WORK.md  IDUN_LOG_SUMMARIES.md  README.md  REVIEW_FINDINGS.md  config.py  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: mutation.yml  test.yml  tests-nightly.yml
Generation/LDM/: LDM_inference.py  autoencoder.py  autoencoder_gen.py  diffusion.py
Generation/TrainGen/: generate.py  train.py
Generation/docs/: pure_bf16_attempts.md
IDUN/: submit_prefer_h100.sh  tensorboard.slurm  train_template.slurm  watch_job.sh
IDUN/debug/: bisect_0c6c6c7.slurm  bisect_1_db1ae01.slurm  bisect_2_8ed1be3.slurm  bisect_3_63123dc.slurm  bisect_4_bdb9b94.slurm  bisect_60dc0af.slurm  bisect_6240069.slurm  bisect_8ed1be3.slurm  bisect_9d1217d.slurm  bisect_bad_8ed1be3.slurm  bisect_bdb9b94.slurm  bisect_f8468d2.slurm  bisect_good_60dc0af.slurm  bisect_head_fixed.slurm  debug_conditioning.slurm  debug_ldm_roundtrip_exp9_1.slurm  diagnose.slurm  exp1_memory_profile.slurm  test_bf16_repro.slurm  test_head_baseline.slurm  test_head_bf16mse.slurm  test_new_commit.slurm  test_no_compile.slurm  test_no_compile_no_msssim.slurm  test_no_msssim.slurm  test_old_commit.slurm
IDUN/downstream/: exp1_seg_baseline_2d.slurm  exp1_seg_baseline_3d.slurm  exp2_seg_dual_baseline_3d.slurm
IDUN/eval/: calibrate_degradation.slurm  compare_degradation_methods.slurm  compare_refinement_models.slurm  compare_refinement_models_v2.slurm  compare_refinement_resume.slurm  debug_conditioning.slurm  debug_ldm_roundtrip_exp9_1.slurm  diagnose_mean_blur.slurm  diagnose_mean_blur_exp37_1.slurm  diagnose_mean_blur_exp37_2.slurm  diagnose_mean_blur_exp37_3.slurm  eval_bin_adherence.slurm  eval_bin_adherence_exp2e.slurm  eval_blur_attack_compare.slurm  eval_compare_exp32.slurm  eval_compression_fid_exp8_1.slurm  eval_diffrs.slurm  eval_ode_solvers.slurm  eval_pca_all_models.slurm  eval_pca_dual_triple.slurm  eval_pca_exp1_128_variants.slurm  eval_pca_exp1_variants.slurm  eval_phema_sweep.slurm  eval_phema_sweep_exp1o_1.slurm  eval_restart.slurm  eval_steps_pca_exp23.slurm  eval_threshold_exp14_1.slurm  eval_time_shift_exp14_1.slurm  eval_time_shift_exp1_1.slurm  eval_time_shift_exp1_1_1000_v2.slurm  eval_time_shift_exp1v2_2_1000.slurm  eval_time_shift_exp23.slurm  fid_compression_equalize.slurm  fid_vqvae_roundtrip_compare.slurm  find_optimal_cfg_exp1n.slurm  find_optimal_freeu_exp1_1_1000.slurm  find_optimal_steps.slurm  find_optimal_steps_exp12b_2.slurm  find_optimal_steps_exp13_dit_4x.slurm  find_optimal_steps_exp14_1.slurm  (+71 more)
IDUN/generate/: compare_exp1_1_vs_exp37.slurm  compare_imagenet_optima.slurm  exp1_1_gen_3d_256.slurm  exp1_gen_3d_128.slurm  gen_3d_128.slurm  gen_3d_full.slurm  gen_degradation_pairs.slurm  gen_exp1_1_1000_bravo.slurm  gen_exp1_1_1000_bravo_real_seg_test1_nofilter.slurm  gen_exp1_1_imagenet.slurm  gen_exp1_1_radimagenet.slurm  gen_exp1v2_2_1000_dual_525.slurm  gen_exp23_bravo_imagenet.slurm  gen_exp23_bravo_radimagenet.slurm  gen_exp23_bravo_real_seg.slurm  gen_exp23_bravo_real_seg_test1_nofilter.slurm  gen_exp47a_80steps_10vols.slurm  generate_exp1v2_2_1000.slurm
IDUN/misc/: benchmark_e.slurm  benchmark_ee.slurm  benchmark_multigpu_e.slurm  eval_128.slurm  eval_256.slurm  eval_rflow_50.slurm  eval_tt.slurm  extract_data.slurm
IDUN/profiling/: profile_dit_memory.slurm  profile_hdit_uvit.slurm  profile_latent_3d_unet.slurm  profile_mamba.slurm  profile_pixel_3d_unet.slurm  profile_pixel_3d_unet_v2.slurm  profile_s2d_3d.slurm  profile_small_unet.slurm  sweep_vae3d_architectures.slurm
IDUN/slurmG/: base_128_noAMP.slurm  dual_128.slurm  rflow_256_50.slurm
IDUN/slurmT/: ddpm_128_bravo.slurm  ddpm_128_dual.slurm  ddpm_256_dual_multi_g.slurm  rflow_128_bravo.slurm  test_multi_g.slurm
IDUN/test/: test_extractor_vram.slurm  verify_tensorboard_tags.slurm
IDUN/train/: exp1_rflow_128_baseline.slurm  exp2_rflow_128_100steps.slurm
IDUN/vae/: exp1_progressive_baseline.slurm
config/: README.md  __init__.py  paths.py
configs/: config.yaml  dcae.yaml  dcae_3d.yaml  diffrs.yaml  diffusion.yaml  diffusion_3d.yaml  generate.yaml  lr_finder.yaml  segmentation.yaml  train_vae.yaml  train_vae_progressive.yaml  vae.yaml  vae_3d.yaml  vae_progressive.yaml  visualize_augmentations.yaml  vqvae.yaml  vqvae_3d.yaml
configs/controlnet/: default.yaml
configs/dcae/: default.yaml  f128.yaml  f32.yaml  f64.yaml
configs/dcae_3d/: default.yaml  f32_d4.yaml
configs/latent/: default.yaml
configs/mode/: bravo.yaml  bravo_seg_cond.yaml  dual.yaml  multi.yaml  multi_modality.yaml  restoration.yaml  restoration_synthetic.yaml  seg.yaml  seg_compression.yaml  seg_conditioned.yaml  seg_conditioned_3d.yaml  seg_conditioned_input.yaml  seg_conditioned_input_3d.yaml  seg_diffusion_3d.yaml  t1_gd.yaml  t1_pre.yaml  triple.yaml
configs/model/: default.yaml  default_3d.yaml  default_3d_5lvl.yaml  dit.yaml  dit_3d.yaml  hdit_3d.yaml  mamba.yaml  mamba_3d.yaml  sit.yaml  sit_3d.yaml  smoke_test.yaml  (+2 more)
data/: brain_pca_256x256x160.npz  seg_pca_256x256x160.npz
docs/: architecture.md  commands.md  common-pitfalls.md  eval-ode-solvers.md  experiment_results.md  experiment_results_3d.md  future_work_v2.md  profiling_results.md
misc/: analyze_dataset.py  analyze_tumor_sizes.py  archive_folders.py  chain_submit.sh  compare_histograms.py  copy_tensorboard.sh  debug_conditioning.py  delete_seg_files.py  diagnose_nnunet.py  download_tensorboard.sh  eval_bin_adherence.py  evaluate_maisi_vae.py  extract_tb_trajectories.py  local_ci.sh  nightly_cron.sh  nii_to_png.py  plot_lr_sch.py  profile_3d_memory.py  profile_dit_memory.py  profile_mamba_memory.py  profile_vae3d_memory.py  scheduler_test.py  test.py  validate_before_submit.sh  validate_nnunet_conversion.py  verify_tensorboard_tags.sh
scripts/: evaluate_maisi_vae.py  extract_idun_logs.py  extract_tb.py  narrate_idun.py  narrate_runs.py
tests/: CATEGORIES.md  EXAMPLES.md  FIXTURES.md  README.md  __init__.py  conftest.py  utils.py
(+942 files in other folders)
