[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medgen"
version = "0.1.0"
description = "Synthetic medical image generation using diffusion models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[project.scripts]
medgen-train = "medgen.scripts.train:main"
medgen-generate = "medgen.scripts.generate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "baseline: marks tests as baseline comparison tests (may fail after code changes)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
