[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medgen"
version = "0.1.0"
description = "Synthetic medical image generation using diffusion models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[project.scripts]
medgen-train = "medgen.scripts.train:main"
medgen-generate = "medgen.scripts.generate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning:torch.*",
]
markers = [
    "baseline: marks tests as baseline comparison tests (may fail after code changes)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "e2e: marks end-to-end tests",
    "benchmark: marks performance benchmark tests",
]

[tool.coverage.run]
source = ["src/medgen"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 15
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
exclude = ["misc/", "IDUN/", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E402"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "pre-commit>=3.0",
    "ruff>=0.3.0",
    "hypothesis>=6.0",
    "pytest-benchmark>=4.0",
    "mutmut>=3.0",
]
