[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medgen"
version = "0.1.0"
description = "Synthetic medical image generation using diffusion models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[project.scripts]
medgen-train = "medgen.scripts.train:main"
medgen-generate = "medgen.scripts.generate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning:torch.*",
]
markers = [
    "baseline: marks tests as baseline comparison tests (may fail after code changes)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "e2e: marks end-to-end tests",
    "benchmark: marks performance benchmark tests",
]

[tool.coverage.run]
source = ["src/medgen"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 15
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "misc/",
    "IDUN/",
    "*.ipynb",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modern Python)
    "B",      # flake8-bugbear (common bugs)
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top
    "B008",   # function call in default argument (hydra pattern)
    "B027",   # empty method in abstract class (intentional hook pattern)
    "B905",   # zip() without strict= (not always needed)
    "SIM108", # ternary operator (sometimes less readable)
    "SIM102", # nested if (sometimes clearer)
    "SIM116", # dict vs if-elif (sometimes clearer with comments)
    "SIM117", # nested with (clearer for separate contexts)
    "SIM118", # key in dict vs key in dict.keys() (explicit is fine)
    "RUF001", # ambiguous unicode in string (intentional math symbols)
    "RUF002", # ambiguous unicode in docstring (intentional math symbols)
    "RUF003", # ambiguous unicode in comment (intentional math symbols)
    "RUF005", # list spread vs concatenation (style preference)
    "RUF012", # mutable class attributes (would need ClassVar everywhere)
    "RUF013", # implicit Optional (explicit None default is clear)
    "RUF015", # next(iter()) vs [0] (readability trade-off)
    "RUF022", # __all__ not sorted (organized by category instead)
    "RUF059", # unused unpacked variable (common pattern with destructuring)
    "F841",   # unused variable (sometimes intentional for debugging/clarity)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]  # Less strict for tests
"scripts/*" = ["B", "SIM"]
"*/__init__.py" = ["I001", "F401"]  # Skip isort and unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["medgen"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Start permissive
ignore_missing_imports = true
exclude = ["tests/", "scripts/", "misc/", "IDUN/"]

# Strict checking for core modules (gradual adoption)
[[tool.mypy.overrides]]
module = [
    "medgen.diffusion.modes",
    "medgen.diffusion.strategies",
    "medgen.diffusion.spaces",
    "medgen.diffusion.protocols",
    "medgen.core.validation",
]
disallow_untyped_defs = true

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "pre-commit>=3.0",
    "ruff>=0.3.0",
    "hypothesis>=6.0",
    "pytest-benchmark>=4.0",
    "mutmut>=3.0",
]
